--- a/FE/insta-character/src/styles.css
+++ b/FE/insta-character/src/styles.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f5f5f5;
+    background-color:#8B8BFF;
   }
   
   .form-container {
@@ -11,6 +11,18 @@
     background-color: #fff;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
+  }
+
+  .hashtag-box {
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-right: 20px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    display: inline-block;
+    background-color: #FEFF4B;
   }
   
   form {
@@ -46,3 +58,6 @@
     background-color: #3535b1;
   }
   
+  .mbti-container{
+    align-items: center;
+  }
